--- a/config.yml
+++ b/config.yml
@@ -37,6 +37,13 @@ app:
     secretAccessKey: openIM123
     secure: false
 
+  ## 腾讯云对象存储配置
+  tencent:
+    BucketURL: https://jimuos-1252940994.cos.ap-nanjing.myqcloud.com
+    ServiceURL: https://cos.ap-nanjing.myqcloud.com
+    SecretID: AKIDUr1wfBVbT6VfaIl03sSnwsa4LOCl5B1c
+    SecretKey: PZUAbmiPs53mFTSBi26vVqwmNjqiLiqj
+
   rabbitMQ:
     host: localhost
     port: 5672
